# ARISA-MLOps

./: 02 - Model version 2.ipynb  Makefile  pyproject.toml
.github/workflows/: codecheck.yaml
ARISA_Leszek_Solution_01/: README.md
ARISA_Leszek_Solution_01/Titanic survival/: __init__.py
ARISA_Leszek_Solution_01/Titanic survival/modeling/: predict.py
Titanic survival/: dataset.py  features.py  plots.py
Titanic survival/modeling/: train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01 -  Before_MLOps.ipynb  02 - Model version 2.ipynb
results/: catboost_model_titanic.cbm  catboost_model_titanic_v2.cbm  predictions.csv
