[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Titanic survival"
version = "0.0.1"
description = "JAkis tam nowy projekt"
authors = [
  { name = "Leszek Kwa\u015bniewski" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["Titanic survival"]
force_sort_within_sections = true
